--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,1 @@
-/*  your css code here. If applicable */
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.hero {
-	object-fit: cover;
-	display: flex;
-	position: relative;
-}
-
-.hero-content {
-	position: absolute;
-    text-align: center;
-    color: black;
-    z-index: 1;
-}
-
-.hero-content h1 {
-    font-size: 3em;
-    margin: 0;
-}
-
-.hero-content p {
-    font-size: 1.5em;
-    margin: 10px 0;
-}
-
-.button {
-	padding: 10px;
-	background-color: red;
-	color: white;
-	border-radius: 5px;
-	text-decoration: none;
-}
+/*  your css code here. If applicable *
